<resources>
    <string name="app_name">MC Assignment1</string>
    <string name="red">Red</string>
    <string name="orange">ORANGE</string>
    <string name="yellow">YELLOW</string>
    <string name="green">GREEN</string>
    <string name="blue">BLUE</string>
    <string name="indigo">INDIGO</string>
    <string name="violet">VIOLET</string>
    <string name="sample_button_a">Sample Button A</string>
    <string name="button_b">Button B</string>
</resources>
